<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">Real Estate Manager</string>
    <string name="title_listing_list">Listings</string>
    <string name="title_listing_detail">Listing detail</string>
    <string name="add_a_listing">Add a listing</string>
    <string name="edit_this_listing">Edit this listing</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="listing_photo">Listing photo</string>
    <string name="price">Price</string>
    <string name="area">Area</string>
    <string name="on_sale_date">On Sale Date</string>
    <string name="sell_date">Sell date</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="type_of_property">Type of real estate property</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="location">Location</string>
    <string name="edit_label">Edition</string>
    <string name="media">Media</string>
    <string name="list_label">List</string>
    <string name="map_label">Map</string>
    <string name="sliding_pane_label">Real Estate Manager</string>
    <string name="photo_title">Title of the photo</string>
    <string name="choose_this_as_thumbnail">Choose this as thumbnail</string>
    <string name="delete_this_photo">Delete this photo</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="m2">M²</string>

    <string name="chip">%1$s: %2$s</string>
    <string name="number_of_photos">Number of photos</string>
    <string name="dollar">$</string>
    <string name="rooms">rooms</string>
    <string name="photos">photos</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="price_format_dollar">$ %1$s</string>
    <string name="price_format_euro">%1$s €</string>
    <string name="characteristics">Characteristics</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="area_format">%1$s M²</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_photo_from_galery">From the galery</string>
    <string name="add_photo_from_camera">From the camera</string>
    <string name="listing_title">%1$s in %2$s</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="loan_calculator">Loan calculator</string>
    <string name="loan_amount">Loan amount</string>
    <string name="term_in_months">Term in months</string>
    <string name="interest_rate">Annual interest rate</string>
    <string name="months">months</string>
    <string name="loan_calculator_description">Estimate your monthly payments, depending on the amount you wish to loan and how long you want to pay back.</string>
    <string name="monthly_amount">Monthly amount</string>
    <string name="interests_result">"You will be paying %2$s %1$s total in interests"</string>
    <string name="sold">Sold</string>
    <string name="realtor">Realtor</string>
    <string name="your_name">Your name</string>
    <string name="currency">Currency</string>
    <string name="display_settings">Display preferences</string>
    <string name="listing_saved">Listing saved</string>

</resources>
