<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="1"
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:orderInCategory="2"
        android:id="@+id/action_new"
        android:icon="@drawable/ic_baseline_add"
        android:title="@string/add_a_listing"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_loan_calculator"
        android:icon="@drawable/ic_baseline_calculate"
        android:orderInCategory="4"
        android:title="@string/loan_calculator"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings"
        android:orderInCategory="5"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>