<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/left_pane_navgraph"
    app:startDestination="@id/sliding_pane_dest">

    <fragment
        android:id="@+id/sliding_pane_dest"
        android:name="com.openclassrooms.realestatemanager.ui.SlidingPaneFragment"
        android:label="@string/sliding_pane_label"
        tools:layout="@layout/fragment_sliding_pane">
        <action
            android:id="@+id/settings_action"
            app:destination="@id/settings_dest" />
        <action
            android:id="@+id/calculator_action"
            app:destination="@id/loan_calculator_dest" />
    </fragment>
    <fragment
        android:id="@+id/settings_dest"
        android:name="com.openclassrooms.realestatemanager.ui.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/loan_calculator_dest"
        android:name="com.openclassrooms.realestatemanager.ui.LoanCalculatorFragment"
        android:label="@string/loan_calculator"
        tools:layout="@layout/fragment_loan_calculator" />
</navigation>