<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/container_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/container_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/add_a_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/action_add_from_galery"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="@dimen/text_margin"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/add_photo_from_galery"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_baseline_add_photo_alternat"
        app:drawableTint="?android:attr/textColorPrimary" />

    <TextView
        android:id="@+id/action_add_from_camera"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="@dimen/text_margin"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/add_photo_from_camera"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:background="?attr/selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_baseline_add_a_photo"
        app:drawableTint="?android:attr/textColorPrimary" />
</LinearLayout>