<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <HorizontalScrollView
        android:id="@+id/filter_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_area"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/area" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_price"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/price" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_rooms"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/number_of_rooms" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_photos"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/number_of_photos" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_poi"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/points_of_interest" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.slidingpanelayout.widget.SlidingPaneLayout
        android:id="@+id/sliding_pane_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_chips">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/left_pane"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:navGraph="@navigation/left_pane_navgraph" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_nav_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_nav_menu" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/right_pane"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_right_pane"
            app:defaultNavHost="true"
            app:navGraph="@navigation/right_pane_navgraph"
            tools:layout="@layout/fragment_list" />
    </androidx.slidingpanelayout.widget.SlidingPaneLayout>

</androidx.constraintlayout.widget.ConstraintLayout>