<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/container_margin"
            tools:context=".ui.MainActivity">

            <TextView
                android:id="@+id/title_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:itemCount="1"
                tools:listitem="@layout/item_photo" />

            <TextView
                android:id="@+id/title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerDrawable="@drawable/divider"
                app:flexWrap="wrap"
                app:justifyContent="space_between"
                app:showDivider="middle">

                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:background="#F8BBD0"
                    android:orientation="vertical"
                    app:layout_flexGrow="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surface" />

                    <TextView
                        android:id="@+id/detail_surface"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_rooms" />

                    <TextView
                        android:id="@+id/detail_rooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_bathrooms" />

                    <TextView
                        android:id="@+id/detail_bathrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_bedrooms" />

                    <TextView
                        android:id="@+id/detail_bedrooms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:background="#B3E5FC"
                    android:orientation="vertical"
                    app:layout_flexGrow="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/detail_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:background="#FFECB3"
                    android:orientation="vertical"
                    app:layout_flexGrow="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_flexGrow="1" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>