<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_background">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/list_photo_cardview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/list_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/listing_photo"
            app:srcCompat="@drawable/ic_placeholder_building" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/type_of_property"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_photo_cardview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_neighborhood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/neighborhood"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toTopOf="@id/list_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_photo_cardview"
        app:layout_constraintTop_toBottomOf="@id/list_title" />

    <TextView
        android:id="@+id/list_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="$ 0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/list_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_photo_cardview" />
</androidx.constraintlayout.widget.ConstraintLayout>